--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.h2.console.enabled=true
+some.key = spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
 
